ui-kit: avatar component. TODO: spinner in loading, fix sometimes wrong sizes

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -61,6 +61,12 @@
   --ui-kit-icon-size-medium: 20px ;
   --ui-kit-icon-size-large: 24px ;
 
+  //Avatar
+  --ui-kit-avatar-size-small: 32px;
+  --ui-kit-avatar-size-medium: 48px;
+  --ui-kit-avatar-size-large: 64px;
+  --ui-kit-avatar-border-color: none;
+
   // Padding
   --ui-kit-padding-t-b-small: 4px;
   --ui-kit-padding-l-r-small: 8px;
